--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 15px 0px;
+    padding: 20px 0px;
     border: 1px solid coral;
     margin : 150px 0px
 }
@@ -39,4 +39,7 @@ body{
     justify-content: center;
     align-items: center;
     cursor: pointer;
+}
+.operator{
+    color: coral;
 }
